--- a/Activity 1/ungoalstep1.html
+++ b/Activity 1/ungoalstep1.html
@@ -3,8 +3,8 @@
 <head>
 	<title>UN Goals Step 1</title>
 </head>
-<style type="text/css">
-	
+
+<style>
 	.home {
 		position: fixed;
 		top: 10px;
@@ -18,10 +18,13 @@
 	}
 </style>
 <body>
-	<div class = "home">
-		<form action = "../index.html">
-			<input class = "btn" type = "submit" value = "HOME"/>
-		</form>
-	</div>
+
+<div class = "home">
+	<form  action="../index.html">
+	    <input class = "btn" type="submit" value="HOME" />
+	</form>
+</div>
+
+
 </body>
 </html>
