--- a/Activity 1/ungoalstep3.html
+++ b/Activity 1/ungoalstep3.html
@@ -54,7 +54,7 @@
     </div>
     <div class="flip-box-back" style="background-color: #EB1C2D">
       <h3>No Poverty</h3>
-      <p>Should eveyone be given basic rights such as water, food, and shelter?</p>
+      <p>Is universial income the solution?</p>
     </div>
   </div>
 </div>
@@ -264,3 +264,4 @@
   </div>
 </div>
 </body>
+</html>
