--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </form>
 
 
-        <td>In this stage we configured the photo resources and created the file structure and template.</td>
+        <td>In this stage I set up my first html template.</td>
       </tr>
       <tr>
         <td>Stage 2</td>
@@ -61,7 +61,7 @@
       </form>
 
         </td>
-        <td>Description 2</td>
+        <td>In this stage I made the first goal and wrote the description and made it flip when the cursor is put over it.</td>
       </tr>
      
       <tr>
@@ -73,7 +73,7 @@
       </form>
 
         </td>
-        <td>Description 3</td>
+        <td>In this stage all of the goals were added. However there was no formatting and they are all just in one vertical line.</td>
       </tr>
 
       <tr>
@@ -85,7 +85,7 @@
       </form>
 
         </td>
-        <td>Description 4</td>
+        <td>In this stage the squares where made into a grid and there was a blue background added.</td>
       </tr>
 
       <tr>
@@ -97,7 +97,7 @@
       </form>
 
         </td>
-        <td>Description 5</td>
+        <td>In this stage the title "Sustainable Development Goals" was added at the top.</td>
       </tr>
 
       <tr>
@@ -109,7 +109,7 @@
       </form>
 
         </td>
-        <td>Description 6</td>
+        <td>In this stage the new font was added which is serif.</td>
       </tr>
 
       <tr>
@@ -121,7 +121,7 @@
       </form>
 
         </td>
-        <td>Description 7</td>
+        <td>In this stage a home button was added to the top right corner which take you back to the index page.</td>
       </tr>
      
     </table>
