--- a/template1.html
+++ b/template1.html
@@ -18,12 +18,12 @@
 	</div>
 		<!-- MAIN HEADER -->
 	<div class="header" id="myHeader">
-	  <h2 id = "headerfont">Life on Land</h2>
+	  <h2 id = "headerfont">Life Below Water</h2>
 	  <div class="topnav" id="nav">
 	  <a class="active" href="#home">Home</a>
 	  <a href="#contact">Contact</a>
 	  <a href="#services">Services</a>
-	  <a href="https://sites.google.com/ucc.on.ca/year9designcoding-nreszetnik">About</a>
+	  <a href="https://sites.google.com/ucc.on.ca/year9designcoding-edawood/home">About</a>
 	</div>
 </div>
 	</div>
@@ -37,19 +37,19 @@
 	  <div class="mySlides fade">
 	    <div class="numbertext">1 / 3</div>
 	    <img src="mountain.jpg" style="width:100%">
-	    <div class="text slideshow">We are using 25% more resources than our planet can sustain each year.</div>
+	    <div class="text slideshow">The Earth is 75% ocean.</div>
 	  </div>
 
 	  <div class="mySlides fade">
 	    <div class="numbertext">2 / 3</div>
 	    <img src="forest.jpg" style="width:100%">
-	    <div class="text slideshow">Tropical forests are being destroyed at a rate of about 8 million hectares (31,000 square miles) a year.</div>
+	    <div class="text slideshow">More then 3 billion people depend on coastal and marine biodiversity.</div>
 	  </div>
 
 	  <div class="mySlides fade">
 	    <div class="numbertext">3 / 3</div>
 	    <img src="tower-of-giraffes.jpg" style="width:100%">
-	    <div class="text slideshow">99% of currently threatened species are at risk from human activities</div>
+	    <div class="text slideshow">40% of the ocean is heavily affected by pollution, depleted fisheries, loss of coastal habitants and other human activities.</div>
 	  </div>
 
 	  <!-- Next and previous buttons -->
@@ -135,4 +135,4 @@
 	<script type="text/javascript" src="script.js"></script>  
 
 </body>
-</html>
+</html>ter
