--- a/template1.html
+++ b/template1.html
@@ -18,12 +18,12 @@
 	</div>
 		<!-- MAIN HEADER -->
 	<div class="header" id="myHeader">
-	  <h2 id = "headerfont">Life Below Water</h2>
+	  <h2 id = "headerfont">Life on Land</h2>
 	  <div class="topnav" id="nav">
 	  <a class="active" href="#home">Home</a>
-	  <a href="#contact">Contact</a>
-	  <a href="#services">Services</a>
-	  <a href="https://sites.google.com/ucc.on.ca/year9designcoding-edawood/home">About</a>
+	  <a href="https://www.undp.org/content/undp/en/home/sustainable-development-goals.html">About</a>
+	  <a href="https://www.theoceancleanup.com/">Charity</a>
+	  <a href="https://sites.google.com/ucc.on.ca/year9designcoding-edawood/home?authuser=0">About</a>
 	</div>
 </div>
 	</div>
@@ -37,19 +37,17 @@
 	  <div class="mySlides fade">
 	    <div class="numbertext">1 / 3</div>
 	    <img src="mountain.jpg" style="width:100%">
-	    <div class="text slideshow">The Earth is 75% ocean.</div>
+	    <div class="text slideshow">139 acres of trees are cut down every day.</div>
 	  </div>
 
 	  <div class="mySlides fade">
 	    <div class="numbertext">2 / 3</div>
-	    <img src="forest.jpg" style="width:100%">
-	    <div class="text slideshow">More then 3 billion people depend on coastal and marine biodiversity.</div>
+	    <div class="text slideshow">Everyday 8 million pieces of plastic make their way into the ocean everyday.</div>
 	  </div>
 
 	  <div class="mySlides fade">
 	    <div class="numbertext">3 / 3</div>
-	    <img src="tower-of-giraffes.jpg" style="width:100%">
-	    <div class="text slideshow">40% of the ocean is heavily affected by pollution, depleted fisheries, loss of coastal habitants and other human activities.</div>
+	    <div class="text slideshow">99% of currently threatened species are at risk from human activities</div>
 	  </div>
 
 	  <!-- Next and previous buttons -->
@@ -70,13 +68,13 @@
 		<h1>Introduction</h1>
 	</header>
 		<br>
-		Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of our human diet, and we rely on agriculture as an important economic resource and means of development. Forests account for 30 percent of the earth’s surface, providing vital habitats for millions of species and important sources for clean air and water; as well as being crucial for combating climate change. 
+		Human life depends on the world to sustain them. With the rate of deforestation and pollution in the ocean it makes it almost certain that humans will be extinct much before we thought. Over 3 billion people rely on the ocean for their food. Islands like Japan depends mostly on the ocean. With all of this garbage being put in the ocean it effects the food we are putting into our bodys.
 		<br>
 		<br>
-		Today we are seeing unprecedented land degradation, and the loss of arable land at 30 to 35 times the historical rate. Drought and desertification is also on the rise each year, amounting to the loss of 12 million hectares and affects poor communities globally. Of the 8,300 animal breeds known, 8 percent are extinct and 22 percent are at risk of extinction. 
+		Not only are animals being hunted to extinction but effects from humans are also killing them. For example, many animals in the artic are being greatly effected by global warming and their homes literally melting away.
 		<br>
 		<br>
-		The SDGs aim to conserve and restore the use of terrestrial ecosystems such as forests, wetlands, drylands and mountains by 2020. Halting deforestation is also vital to mitigating the impact of climate change. Urgent action must be taken to reduce the loss of natural habitats and biodiversity which are part of our common heritage.
+		Earth can be inhabitable in 150 million years. This may seem like a lot of time. However, compared to what it would have been if humans had not made their perminant damage to the Earth. 
 		<br>
 		<br>
 <header>
@@ -120,19 +118,75 @@
 		</div>
 	</div>
 
-
-	<div class="graph">
-		<img src="forestgraph.png" alt="ForestGraph">
-	</div>
-	
 	<div class = "content">
-	<header>
-		<h1>Goals In Action</h1>
-	</header>
-
+		<header>
+			<h1>Data Display</h1>
+		</header>
 	</div>
+
+	<div class="row">
+  <div class="column">
+    <img src="infographic.jpeg" alt="ForestInfo"style="width:100%">
+  </div>
+  <div class="column">
+    <img src="image.jpeg" alt="deforestation" style="width:100%">
+  </div>
+</div>
+
+	<div class = "content">
+		<header>
+			<h1>Goal 15 In Action</h1>
+		</header>
+	</div>
+
+	<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://medium.com/@UNDP/building-equality-on-the-roof-of-the-world-39885f5e35f4">
+      <img src="roof.jpeg" alt="Roof" width="600" height="400">
+    </a>
+    <div class="desc">A lack of running water has adversely affected the lives of women and girls in a remote mountain village in Pakistan.
+</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://medium.com/@UNDP/the-cook-islands-prepares-for-climate-change-a7eeb947fd7">
+      <img src="fisher.jpeg" alt="Fishers" width="600" height="400">
+    </a>
+    <div class="desc">For centuries Cook Islanders have used traditional knowledge to read their environment and provide food for their families. But climate change is effecting them deeply.</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://medium.com/@UNDP/water-gives-and-threatens-life-in-bhutan-97b27bcf8a90">
+      <img src="farmers.jpeg" alt="Farmers" width="600" height="400">
+    </a>
+    <div class="desc">For Phub Zem Doya who lives in the remote village of Singye in southwest Bhutan, water is precious, and not to be taken for granted.</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://stories.undp.org/here-we-are-all-equal">
+      <img src="walkers.jpeg" alt="Walkers" width="600" height="400">
+    </a>
+    <div class="desc">Deyanira Mishari has an unusual job for an indigenous Peruvian woman—she’s Head of the San Matias-San Carlos Protection Forest.</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
 
 	<script type="text/javascript" src="script.js"></script>  
 
+
+<div class = "content">
+		<header>
+			<h1>JSON Data</h1>
+		</header>
+	</div>
+
 </body>
-</html>ter
+</html>
